--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
-theme: jekyll-theme-midnight
+title: Sandailog
+description: I guess I have a blog now...
 
+theme: jekyll-theme-midnight
 site.baseurl: https://sandaidev.github.io/sandailog
