--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Sandailog
-description: I guess I have a blog now...
+title: Sandai's Log
+description: A place about jazz and computing
 
 theme: jekyll-theme-midnight
 site.baseurl: /sandailog/
