Change baseUrl and title

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Sandai's Log
+title: Chiller Tech
 description: A place about jazz and computing
 
 theme: jekyll-theme-midnight
-site.baseurl: /sandailog/
+site.baseurl: /ChillerTech/
