fix baseurl attempt 2

--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Chiller Tech
 description: A place about jazz and computing
 
 theme: jekyll-theme-midnight
-site.baseurl: /ChillerTech
+site.baseurl: /ChillerTech/
